# XFakekey

./: README.md  meson.build  meson_options.txt
src/: config.vala.in  fakekey.vala  meson.build
tests/: meson.build  testcase.vala  testmain.vala  testtype.vala
vapi/: x11.vapi
